--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,26 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js')
+    //link(rel='stylesheet'
+        href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'
+        integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7'
+        crossorigin='anonymous')
+    //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+          integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS'
+          crossorigin='anonymous')
+
+    link(rel='stylesheet', href='/bootstrap-3.3.6/css/bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap-3.3.6/css/bootstrap-theme.css')
+    //link(rel='stylesheet', href='/stylesheets/starterTemplate.css')
+    //link(rel='stylesheet', href='/stylesheets/style.css')
+    //link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Lobster')
+    link(rel='stylesheet', href='/stylesheets/theme.css')
   body
     block content
+
+  script(src='/javascripts/jquery-1.12.1.min.js')
+  script(src='/bootstrap-3.3.6/js/bootstrap.min.js')
