Partially finish homepage

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,13 +14,13 @@ html
           crossorigin='anonymous')
 
     link(rel='stylesheet', href='/bootstrap-3.3.6/css/bootstrap.css')
-    link(rel='stylesheet', href='/bootstrap-3.3.6/css/bootstrap-theme.css')
-    //link(rel='stylesheet', href='/stylesheets/starterTemplate.css')
+    //link(rel='stylesheet', href='/bootstrap-3.3.6/css/bootstrap-theme.css')
     //link(rel='stylesheet', href='/stylesheets/style.css')
     //link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Lobster')
-    link(rel='stylesheet', href='/stylesheets/theme.css')
   body
     block content
 
   script(src='/javascripts/jquery-1.12.1.min.js')
   script(src='/bootstrap-3.3.6/js/bootstrap.min.js')
+  script(src='/javascripts/index.js')
+  
