--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,123 @@
 extends layout
 
 block content
+  link(rel='stylesheet', href='/stylesheets/index.css')
+  nav#topNav.navbar.navbar-default.navbar-fixed-top
+    .container-fluid
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button',data-toggle='collapse',data-target='#bs-navbar')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#Top')
+          i.ion-coffee SCYing
+      #bs-navbar.navbar-collapse.collapse
+        ul.nav.navbar-nav
+          li: a(href='#AboutMe') About Me
+          li: a(href='#Projects') Projects
+          li: a(href='#Things') Things I use
 
-  h1 hello express
+  header#Top.text-center
+    .header-content
+      h1 Hello Javascript!
+      h4 Join the world of javascript open-source projects!
+      p#target1 I am target1
+
+  section#AboutMe.container-fluid.text-center
+    .row
+      .col-lg-6.col-lg-offset-3.col-md-8.col-md-offset-2
+        h1.text-primary Hi I am Shih-Chun Yin
+        br
+        p.text-faded
+          | I am currently working as full-time Software Engineer at TATA Consultancy Services.
+
+  section#Projects.container-fluid
+    .row
+      .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3
+        //http://getbootstrap.com/css/#helper-classes
+        h1.text-center.text-primary Projects
+        //http://getbootstrap.com/components/#media
+        .media.wow.fadeInRight
+          h3 Project 1
+          .media-body.media-middle 
+            p
+              |Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          .media-right
+            a(href='#')
+              img.media-object(src='https://placeholdit.imgix.net/~text?txtsize=19&bg=999999&txtclr=eeeeee&txt=200%C3%97200&w=200&h=200', alt='Project 1 pic')
+
+        .media.wow.fadeInLeft
+          h3 Project 2
+          .media-left
+            a(href='#')
+              img.media-object(src='https://placeholdit.imgix.net/~text?txtsize=19&bg=999999&txtclr=eeeeee&txt=200%C3%97200&w=200&h=200', alt='Project 2 pic')
+          .media-body.media-middle
+            p
+              |Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+        .media.wow.fadeInRight
+          h3.media-heading Project 3
+          .media-body.media-middle
+            p
+              |Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          .media-right
+            a(href='#')
+              img.media-object(src='https://placeholdit.imgix.net/~text?txtsize=19&bg=999999&txtclr=eeeeee&txt=200%C3%97200&w=200&h=200', alt='Project 3 pic')
+
+        .media.wow.fadeInLeft
+          h3 Project 4
+          .media-left
+            a(href='#')
+              img.media-object(src='https://placeholdit.imgix.net/~text?txtsize=19&bg=999999&txtclr=eeeeee&txt=200%C3%97200&w=200&h=200', alt='Project 4 pic')
+          .media-body.media-middle
+            p
+              |Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+        .media.wow.fadeInRight
+          h3 Project 5
+          .media-body.media-middle
+            p
+              |Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          .media-right
+            a(href='#')
+              img.media-object(src='https://placeholdit.imgix.net/~text?txtsize=19&bg=999999&txtclr=eeeeee&txt=200%C3%97200&w=200&h=200', alt='Project 5 pic')
+
+  section#Things.container-fluid.text-center
+    h1.text-primary Things I use
+    br
+    br
+    .row
+      .col-xs-10.col-xs-offset-1
+        .row
+          .col-sm-2.col-sm-offset-1
+            i.ion-social-html5.iconThings
+            p HTML 5
+          .col-sm-2
+            i.ion-social-nodejs.iconThings
+            p Node.js
+          .col-sm-2
+            i.ion-social-angular.iconThings
+            p Angular.js
+          .col-sm-2
+            i.ion-social-css3.iconThings
+            p CSS 3
+          .col-sm-2
+            i.ion-social-javascript.iconThings
+            p JavaScript
+
+  section#Contact.container-fluid.text-center
+    h1.wow.fadeIn Follow me at below
+    ul.list-inline
+      //http://www.w3schools.com/tags/att_a_rel.asp
+      li: a(rel='nofollow',href='https://github.com/paulyin2001',target='_blank',title='GitHub')
+        i.ion-social-github.iconContact
+      li: a(rel='nofollow',href='https://www.linkedin.com/in/paulyin2001',target='_blank',title='LinkedIn')
+        i.ion-social-linkedin.iconContact
+      li: a(rel='nofollow',href='http://codepen.io/scying/',target='_blank',title='CodePen')
+        i.ion-social-codepen.iconContact
+      li: a(rel='nofollow',href='#',target='_blank',title='Home')
+        i.ion-ios-home.iconContact
+
+  footer.container-fluid.text-center
+    p Shih-Chun Yin ©2016
