--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:200);
 @import url(//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css);
+/*fadeLeftIn or fadeRightIn will cause horizontal scroll bar grow and shrink a moment*/
+
 /* navbar */
 .navbar-default {
     border-color: transparent;
@@ -24,7 +27,9 @@
     letter-spacing: 1.1px;
     text-shadow: 1px 1px 1px rgba(60,60,60,0.7);
 }
-
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .nav>li>a:hover,
 .navbar-default .nav>li>a:hover:active,
 .navbar-default .nav > li.active>a,
@@ -37,6 +42,10 @@
 .navbar-default .navbar-collapse{
 	border-color: transparent;
 }
+.navbar-toggle{
+	border-color: transparent;
+}
+
 /* header */
 html,body {
     width: 100%;
@@ -66,10 +75,14 @@ section {
     color: white;
 }
 #AboutMe{
-	background-color: #1a4288;
+	background-color: #183972;
 }
 #Projects{
 	background-color: #2c2c50;
+}
+#Projects #project1,#Projects #project2,#Projects #project3,
+#Projects #project4,#Projects #project5{
+	animation-duration: 5s;
 }
 img {
 	height: 150px;
