--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,4 +23,5 @@ html
   script(src='/javascripts/jquery-1.12.1.min.js')
   script(src='/bootstrap-3.3.6/js/bootstrap.min.js')
   script(src='/javascripts/index.js')
+  script(src='//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js')
   
