add random quote app with its RESTful API

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -58,6 +58,7 @@ header {
     color: white;
     width: 100%;
     background-image: url('/images/stars.jpg');
+    /*http://img2.goodfon.su/original/2560x1440/3/5c/peyzazh-zvezdnoe-nebo-zvezdy.jpg*/
     background-position: center;
     background-size: cover;
 }
