--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   link(rel='stylesheet', href='/stylesheets/index.css')
+  script(src='/javascripts/index.js')
   nav#topNav.navbar.navbar-default.navbar-fixed-top
     .container-fluid
       .navbar-header
